# clckwrks-plugin-mailinglist

./: LICENSE  README.md  clckwrks-plugin-mailinglist.cabal
Clckwrks/MailingList/: Acid.hs  Monad.hs  Plugin.hs  PreProcess.hs  Route.hs  Types.hs  URL.hs
Clckwrks/MailingList/Admin/: EditMessage.hs  MailingListSettings.hs  NewMessage.hs  SendMessage.hs  ViewMessages.hs  ViewSubscribers.hs
Clckwrks/MailingList/Page/: ConfirmOptIn.hs  Subscribe.hs  Template.hs
