Name:                clckwrks-plugin-mailinglist
Version:             0.2.0
Synopsis:            mailing list plugin for clckwrks
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
    data/style.css

source-repository head
    type:     darcs
    location: http://hub.darcs.net/stepcut/clckwrks-plugin-mailinglist

Library
  Build-tools:
    trhsx

  Exposed-modules:
    Clckwrks.MailingList.Acid
    Clckwrks.MailingList.Monad
    Clckwrks.MailingList.Plugin
    Clckwrks.MailingList.Page.Subscribe
    Clckwrks.MailingList.Page.Template
    Clckwrks.MailingList.PreProcess
    Clckwrks.MailingList.Route
    Clckwrks.MailingList.Types
    Clckwrks.MailingList.URL
    Paths_clckwrks_plugin_mailinglist

  Build-depends:
    base                    < 5,
    acid-state             >= 0.11,
    attoparsec             == 0.10.*,
    clckwrks               >= 0.18 && < 0.19,
    containers             >= 0.4 && < 0.6,
    directory              >= 1.1 && < 1.3,
    filepath               >= 1.2 && < 1.4,
    happstack-authenticate == 0.10.*,
    happstack-server       >= 7.3 && < 7.4,
    happstack-hsp          == 7.2.*,
    hsp                    == 0.9.*,
    ixset                  == 1.0.*,
    mtl                    >= 2.0 && < 2.3,
    network                >= 2.3 && < 2.5,
    reform                 == 0.2.*,
    reform-happstack       == 0.2.*,
    reform-hsp             >= 0.2 && < 0.3,
    safecopy               >= 0.6,
    time                   == 1.4.*,
    text                   == 0.11.*,
    web-plugins            >= 0.1 && < 0.3,
    web-routes             == 0.27.*,
    web-routes-th          >= 0.21
