Name:                clckwrks-plugin-mailinglist
Version:             0.2.0
Synopsis:            mailing list plugin for clckwrks
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
    data/style.css

source-repository head
    type:     darcs
    location: http://hub.darcs.net/stepcut/clckwrks-plugin-mailinglist

Library

  Exposed-modules:
                  Clckwrks.MailingList.Acid
                  Clckwrks.MailingList.Admin.MailingListSettings
                  Clckwrks.MailingList.Monad
                  Clckwrks.MailingList.Plugin
                  Clckwrks.MailingList.Page.ConfirmOptIn
                  Clckwrks.MailingList.Page.Subscribe
                  Clckwrks.MailingList.Page.Template
                  Clckwrks.MailingList.PreProcess
                  Clckwrks.MailingList.Route
                  Clckwrks.MailingList.Types
                  Clckwrks.MailingList.URL
                  Paths_clckwrks_plugin_mailinglist

  Build-depends:
                base                    < 5,
                acid-state             >= 0.11,
                attoparsec             >= 0.10 && < 0.14,
                bytestring,
                clckwrks               >= 0.18 && < 0.24,
                containers             >= 0.4 && < 0.6,
                directory              >= 1.1 && < 1.3,
                html-email-validate,
                filepath               >= 1.2 && < 1.5,
                happstack-authenticate >= 2.3 && < 2.4,
                happstack-hsp          >= 7.2 && < 7.4,
                happstack-server       >= 7.3 && < 7.5,
                hsp                    >= 0.9 && < 0.11,
                hsx2hs,
                HStringTemplate,
                ixset                  == 1.0.*,
                lens,
                mime-mail,
                mtl                    >= 2.0 && < 2.3,
                network-uri            >= 2.6 && < 2.7,
                reform                 == 0.2.*,
                reform-happstack       == 0.2.*,
                reform-hsp             >= 0.2 && < 0.3,
                safecopy               >= 0.6,
                text                   >= 0.11 && < 1.3,
                time                   >= 1.4 && < 1.7,
                uuid,
                uuid-orphans,
                web-plugins            >= 0.1 && < 0.3,
                web-routes             == 0.27.*,
                web-routes-th          >= 0.21
